<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".HomeActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/dashboard"
          android:textColor="@color/black"
          android:textSize="20sp" />

      <View
          android:layout_width="40dp"
          android:layout_height="6dp"
          android:layout_gravity="center"
          android:layout_marginStart="5dp"
          android:background="?attr/colorPrimary" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

  </LinearLayout>

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:clickable="true"
      android:focusable="true"
      app:cardBackgroundColor="@color/teal_200"
      app:cardCornerRadius="6dp"
      app:cardElevation="13dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#E4D6D6"
        android:backgroundTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kesehatan_anak"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="12sp" />

      </LinearLayout>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/desc"
            android:src="@drawable/logo" />

      </RelativeLayout>

    </LinearLayout>

  </androidx.cardview.widget.CardView>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginRight="16dp"
      android:orientation="horizontal"
      android:weightSum="2">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5e5e5e"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="120sp"
            android:layout_height="90sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/desc"
            android:src="@drawable/bbanak" />

      </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nutrisi_anak"
            android:textColor="#5e5e5e"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/desc"
            android:src="@drawable/nutrisi" />

      </RelativeLayout>


    </androidx.cardview.widget.CardView>

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="10dp"
      android:layout_marginRight="16dp"
      android:orientation="horizontal"
      android:weightSum="2">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nutrisi_anak"
            android:textColor="#5e5e5e"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/desc"
            android:src="@drawable/nutrisi" />

      </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nutrisi_anak"
            android:textColor="#5e5e5e"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/desc"
            android:src="@drawable/nutrisi" />

      </RelativeLayout>


    </androidx.cardview.widget.CardView>

  </LinearLayout>


  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:text="@string/v_1_0"
      android:textAlignment="center" />


</LinearLayout>
